examples/test/testpolicy16975.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16975
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key27: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value46
          key14: value0
          key10: value42
      podSelector:
        matchLabels:
          key9: value7
          key33: value48
          key26: value13
